unpackaged/main/default/objects/Diagnostic_Questionnaire__c/Diagnostic_Questionnaire__c.object-meta.xml
<CustomObject>
    <label>Diagnostic Questionnaire</label>
    <nameField>
        <displayFormat>DQ-{000000}</displayFormat>
        <label>Diagnostic Questionnaire Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Diagnostic Questionnaires</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>