unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/A4_Laser_Printer_In_Store__c.field-meta.xml
<CustomField>
    <fullName>A4_Laser_Printer_In_Store__c</fullName>
    <label>A4 Laser Printer In Store?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>