unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/A4_Laser_Printer_In_StoreR__c.field-meta.xml
<CustomField>
    <fullName>A4_Laser_Printer_In_StoreR__c</fullName>
    <formula>IF(TEXT(A4_Laser_Printer_In_Store__c) = &quot;Yes&quot;, 5,
IF(TEXT(A4_Laser_Printer_In_Store__c) = &quot;No&quot;, 0, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>A4 Laser Printer In StoreR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>