unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/A4_or_Thermal_Paper__c.field-meta.xml
<CustomField>
    <fullName>A4_or_Thermal_Paper__c</fullName>
    <label>A4 or Thermal Paper?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A4</fullName>
            </value>
            <value>
                <fullName>Thermal</fullName>
            </value>
            <value>
                <fullName>Manual Forms</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>