unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/A4_or_Thermal_PrinterR__c.field-meta.xml
<CustomField>
    <fullName>A4_or_Thermal_PrinterR__c</fullName>
    <formula>IF(TEXT(A4_or_Thermal_Paper__c) = &quot;A4&quot;, 5,
IF(TEXT(A4_or_Thermal_Paper__c) = &quot;Thermal&quot;, 3,
IF(TEXT(A4_or_Thermal_Paper__c) = &quot;Manual Forms&quot;, 0, 0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>A4 or Thermal PrinterR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>