unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/A4_Printer_at_Each_Till__c.field-meta.xml
<CustomField>
    <fullName>A4_Printer_at_Each_Till__c</fullName>
    <label>A4 Printer at Till or Back Office?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Till</fullName>
            </value>
            <value>
                <fullName>Back Office</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>