unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Able_to_Collect_Issuing_Staff_ID__c.field-meta.xml
<CustomField>
    <fullName>Able_to_Collect_Issuing_Staff_ID__c</fullName>
    <inlineHelpText>By collecting the staff ID we’re able to target an incentive directly to the staff in store with best issue and match rate.</inlineHelpText>
    <label>Able to Collect Issuing Staff ID?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>