unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Diagnostic Questionnaires</relationshipLabel>
    <relationshipName>Diagnostic_Questionnaires</relationshipName>
    <type>Lookup</type>
</CustomField>