unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Acquiring_Solution_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Acquiring_Solution_Subtotal__c</fullName>
    <formula>Current_AcquirerR__c +  Current_DCC_ProviderR__c + DCC_Service_AvailableR__c +  CUP_PaymentsR__c +  Purchase_Amount_Auto_Transfer_R__c +  CRTR__c +  POS_Connected_Via_Eth_and_or_GPRSR__c +  Alipay_and_WeChat_PayR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Acquiring Solution Subtotal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>