unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Acquiring_Solution_Total__c.field-meta.xml
<CustomField>
    <fullName>Acquiring_Solution_Total__c</fullName>
    <label>Acquiring Solution Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>