unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Actionable_Insights__c.field-meta.xml
<CustomField>
    <fullName>Actionable_Insights__c</fullName>
    <inlineHelpText>Do you receive actionable insights into the short term forward looking predictions on arrivals?</inlineHelpText>
    <label>Actionable Insights?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>