unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Actionable_InsightsR__c.field-meta.xml
<CustomField>
    <fullName>Actionable_InsightsR__c</fullName>
    <formula>IF(TEXT(Actionable_Insights__c) = &quot;Yes&quot;, 5,
IF(TEXT(Actionable_Insights__c) = &quot;No&quot;, 0, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actionable InsightsR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>