unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Alipay_and_WeChat_PayR__c.field-meta.xml
<CustomField>
    <fullName>Alipay_and_WeChat_PayR__c</fullName>
    <formula>IF(TEXT(Alipay_Payments__c) = &quot;Yes&quot;, 5, 
IF(TEXT(Alipay_Payments__c) = &quot;No&quot;, 0, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Alipay and WeChat PayR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>