unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Alipay_Payments__c.field-meta.xml
<CustomField>
    <fullName>Alipay_Payments__c</fullName>
    <inlineHelpText>Does the retailer have an Alipay and WeChat Pay?</inlineHelpText>
    <label>Alipay Payments?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>