unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Alipay_PSP__c.field-meta.xml
<CustomField>
    <fullName>Alipay_PSP__c</fullName>
    <label>Alipay PSP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Chinese_Wallet_PSP</valueSetName>
    </valueSet>
</CustomField>