unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Alipay_Push_or_Pull__c.field-meta.xml
<CustomField>
    <fullName>Alipay_Push_or_Pull__c</fullName>
    <label>Alipay Push or Pull?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Push</fullName>
            </value>
            <value>
                <fullName>Pull</fullName>
            </value>
            <value>
                <fullName>No Alipay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>