unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Any_Access_to_Product_Details__c.field-meta.xml
<CustomField>
    <fullName>Any_Access_to_Product_Details__c</fullName>
    <label>Any Access to Product Details (SKU)?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>