unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Any_back_up_in_case_of_breakdown__c.field-meta.xml
<CustomField>
    <fullName>Any_back_up_in_case_of_breakdown__c</fullName>
    <inlineHelpText>Is there any back-up solution in case of service breakdown to issue Vouchers?</inlineHelpText>
    <label>Any Back-up in Case of Breakdown?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable (Manual Forms)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>