unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Any_back_up_in_case_of_breakdownR__c.field-meta.xml
<CustomField>
    <fullName>Any_back_up_in_case_of_breakdownR__c</fullName>
    <formula>IF(TEXT(Any_back_up_in_case_of_breakdown__c) = &quot;Yes&quot;, 5,
IF(TEXT(Any_back_up_in_case_of_breakdown__c) = &quot;No&quot;, 0, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Any back-up in case of breakdownR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>