unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Any_Mobile_Payment_Attached_to_MPOS__c.field-meta.xml
<CustomField>
    <fullName>Any_Mobile_Payment_Attached_to_MPOS__c</fullName>
    <label>Any Mobile Payment Attached to MPOS?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>