unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Auto_Populate_from_Passport_or_App__c.field-meta.xml
<CustomField>
    <fullName>Auto_Populate_from_Passport_or_App__c</fullName>
    <label>Auto Populate from Passport or App?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Passport</fullName>
            </value>
            <value>
                <fullName>App</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
            <value>
                <fullName>Neither</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>