unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Automated_Tax_Free_Process__c.field-meta.xml
<CustomField>
    <fullName>Automated_Tax_Free_Process__c</fullName>
    <inlineHelpText>Is the Tax-Free process automated so that all customer tax free forms are auto populated once the Tourist has a TF Digital App?</inlineHelpText>
    <label>Automated Tax Free Process?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>