unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Automated_Tax_Free_ProcessR__c.field-meta.xml
<CustomField>
    <fullName>Automated_Tax_Free_ProcessR__c</fullName>
    <formula>IF(TEXT(Automated_Tax_Free_Process__c) = &quot;Yes&quot;, 5, 
IF(TEXT(Automated_Tax_Free_Process__c) = &quot;No&quot;, 0, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Automated Tax Free ProcessR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>