unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Benchmarking_Report__c.field-meta.xml
<CustomField>
    <fullName>Benchmarking_Report__c</fullName>
    <inlineHelpText>Do you receive Benchmarking reports, which provide context for retailer performance, with flexibility to utilize auto benchmarking, or customized benchmarking for comparison of merchant performance to peers?</inlineHelpText>
    <label>Benchmarking Report?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>