unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Benchmarking_ReportR__c.field-meta.xml
<CustomField>
    <fullName>Benchmarking_ReportR__c</fullName>
    <formula>IF(TEXT(Benchmarking_Report__c) = &quot;Yes&quot;, 5, 
IF(TEXT(Benchmarking_Report__c) = &quot;No&quot;, 0, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Benchmarking ReportR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>