unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Benefited_from_Change__c.field-meta.xml
<CustomField>
    <fullName>Benefited_from_Change__c</fullName>
    <inlineHelpText>Have they recently benefited from the change in International Interchange?</inlineHelpText>
    <label>Benefited from Change in Interchange?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>