unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Benefits_of_Tax_Free_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>Benefits_of_Tax_Free_to_Customer__c</fullName>
    <inlineHelpText>Staff Clearly outline the benefits of Tax Free to the customer?</inlineHelpText>
    <label>Benefits of Tax Free to Customer?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>