unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Best_Rate_Guarantee_for_DCC__c.field-meta.xml
<CustomField>
    <fullName>Best_Rate_Guarantee_for_DCC__c</fullName>
    <label>Best Rate Guarantee for DCC?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>