unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Brand_Promoted_on_Tax_Free_Website__c.field-meta.xml
<CustomField>
    <fullName>Brand_Promoted_on_Tax_Free_Website__c</fullName>
    <inlineHelpText>Is the brand promoted on their current Tax-Free provider’s website?</inlineHelpText>
    <label>Brand Promoted on Tax Free Website?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>