unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Brand_Promoted_on_Tax_Free_WebsiteR__c.field-meta.xml
<CustomField>
    <fullName>Brand_Promoted_on_Tax_Free_WebsiteR__c</fullName>
    <formula>IF(TEXT(Brand_Promoted_on_Tax_Free_Website__c) = &quot;Yes&quot;, 5, 
IF(TEXT(Brand_Promoted_on_Tax_Free_Website__c) = &quot;No&quot;, 0, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Brand Promoted on Tax Free WebsiteR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>