unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Business_Management__c.field-meta.xml
<CustomField>
    <fullName>Business_Management__c</fullName>
    <formula>IF(AND(Business_Management_Total__c &lt;= 15, Business_Management_Total__c &gt; 0), 
IMAGE(&quot;/servlet/servlet.FileDownload?file=01524000004lpcl&quot;, &quot;Red&quot;,25, 25), 
IF(AND(Business_Management_Total__c &lt;= 30, Business_Management_Total__c &gt; 15), IMAGE(&quot;/servlet/servlet.FileDownload?file=01524000004lpcq&quot;, &quot;Amber&quot;,25, 25), 
IF(Business_Management_Total__c &gt; 30, IMAGE(&quot;/servlet/servlet.FileDownload?file=01524000004lpcv&quot;, &quot;Green&quot;,25, 25), IMAGE(&quot;/servlet/servlet.FileDownload?file=0151o000005ZuOI&quot;, &quot;No Status&quot;, 25, 25))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Management</label>
    <type>Text</type>
</CustomField>