unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Business_Management_SubTotal__c.field-meta.xml
<CustomField>
    <fullName>Business_Management_SubTotal__c</fullName>
    <formula>Weekly_Sales_ReportsR__c +  Trapped_Income_ReportR__c +  Benchmarking_ReportR__c +  Monthly_ReportsR__c +  Actionable_InsightsR__c +  Risk_Compliance_ControlsR__c +  Potential_Risk_ReportsR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Management SubTotal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>