unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Business_Management_Total__c.field-meta.xml
<CustomField>
    <fullName>Business_Management_Total__c</fullName>
    <label>Business Management Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>