unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Check_Status_of_Issued_Form__c.field-meta.xml
<CustomField>
    <fullName>Check_Status_of_Issued_Form__c</fullName>
    <inlineHelpText>Is it possible to check the status of the Tax-Free forms issued by the store during previous days directly from the till point (e.g. stamped by customs/ rejected/ voided/ refunded etc.)?</inlineHelpText>
    <label>Check Status of Issued Form?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>