unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Check_Status_of_Issued_FormR__c.field-meta.xml
<CustomField>
    <fullName>Check_Status_of_Issued_FormR__c</fullName>
    <formula>IF(TEXT(Check_Status_of_Issued_Form__c) = &quot;Yes&quot;, 5, 
IF(TEXT(Check_Status_of_Issued_Form__c) = &quot;No&quot;, 0, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Status of Issued FormR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>