unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/City_Cash_Means_no_Airport_Process__c.field-meta.xml
<CustomField>
    <fullName>City_Cash_Means_no_Airport_Process__c</fullName>
    <inlineHelpText>Do they think that City Centre refund option means no need to do Airport process?</inlineHelpText>
    <label>City Cash Means no Airport Process?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>