unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/City_Cash_Option_Nearby__c.field-meta.xml
<CustomField>
    <fullName>City_Cash_Option_Nearby__c</fullName>
    <inlineHelpText>City Centre Cash Refund Option Nearby?</inlineHelpText>
    <label>City Cash Option Nearby?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>