unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Clear_That_Store_Provides_Tax_Free__c.field-meta.xml
<CustomField>
    <fullName>Clear_That_Store_Provides_Tax_Free__c</fullName>
    <inlineHelpText>Clear signage that store provides Tax Free?</inlineHelpText>
    <label>Clear That Store Provides Tax Free?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>