unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Clear_That_Store_Provides_Tax_FreeR__c.field-meta.xml
<CustomField>
    <fullName>Clear_That_Store_Provides_Tax_FreeR__c</fullName>
    <formula>IF(TEXT(Clear_That_Store_Provides_Tax_Free__c) = &quot;Yes&quot;, 5, 
IF(TEXT(Clear_That_Store_Provides_Tax_Free__c) = &quot;No&quot;, 0, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Clear That Store Provides Tax FreeR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>