unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Connect_to_Tour_Guides__c.field-meta.xml
<CustomField>
    <fullName>Connect_to_Tour_Guides__c</fullName>
    <inlineHelpText>Connect to Tour Guides? Direct or Through Partner?</inlineHelpText>
    <label>Connect to Tour Guides?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes - Direct</fullName>
            </value>
            <value>
                <fullName>Yes - Partner</fullName>
            </value>
            <value>
                <fullName>Yes - Direct &amp; Partner</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>