unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Contactless_on_UnionPay__c.field-meta.xml
<CustomField>
    <fullName>Contactless_on_UnionPay__c</fullName>
    <label>Support Contactless on UnionPay?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>No Union Pay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>