unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/CRT__c.field-meta.xml
<CustomField>
    <fullName>CRT__c</fullName>
    <inlineHelpText>When a customer is Tax Free eligible and pays with a credit card, is the credit card automatically recognised by the POS terminal?</inlineHelpText>
    <label>CRT?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>