unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/CRT_and_Auto_Print__c.field-meta.xml
<CustomField>
    <fullName>CRT_and_Auto_Print__c</fullName>
    <inlineHelpText>Does current TF solution have CRT and Auto Print?</inlineHelpText>
    <label>CRT and Auto Print?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CRT</fullName>
            </value>
            <value>
                <fullName>Auto Print</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
            <value>
                <fullName>Neither</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>