unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/CRTR__c.field-meta.xml
<CustomField>
    <fullName>CRTR__c</fullName>
    <formula>IF(TEXT(CRT__c) = &quot;Yes&quot;, 5, 
IF(TEXT(CRT__c) = &quot;No&quot;, 0, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CRTR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>