unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Cultural_Sales_and_Service_Model__c.field-meta.xml
<CustomField>
    <fullName>Cultural_Sales_and_Service_Model__c</fullName>
    <inlineHelpText>Has the Tax-Free provider provided &#39;Cultural Sales and Service Model’ to ensure staff are fully aware of how to engage and give world class service to all key nationalities coming into store?</inlineHelpText>
    <label>Cultural Sales and Service Model?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>