unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Cultural_Sales_and_Service_ModelR__c.field-meta.xml
<CustomField>
    <fullName>Cultural_Sales_and_Service_ModelR__c</fullName>
    <formula>IF(TEXT(Cultural_Sales_and_Service_Model__c) = &quot;Yes&quot;, 5, 
IF(TEXT(Cultural_Sales_and_Service_Model__c) = &quot;No&quot;, 0.5, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cultural Sales and Service ModelR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>