unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/CUP_Payments__c.field-meta.xml
<CustomField>
    <fullName>CUP_Payments__c</fullName>
    <label>CUP Payments?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>