unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/CUP_PaymentsR__c.field-meta.xml
<CustomField>
    <fullName>CUP_PaymentsR__c</fullName>
    <formula>IF(TEXT(CUP_Payments__c) = &quot;Yes&quot;, 5, 
IF(TEXT(CUP_Payments__c) = &quot;No&quot;, 0, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CUP PaymentsR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>