unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Current_Acquirer__c.field-meta.xml
<CustomField>
    <fullName>Current_Acquirer__c</fullName>
    <label>Current Acquirer?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Adyen</fullName>
            </value>
            <value>
                <fullName>AIB</fullName>
            </value>
            <value>
                <fullName>B+S Card Services</fullName>
            </value>
            <value>
                <fullName>Babs Pay</fullName>
            </value>
            <value>
                <fullName>Bambora</fullName>
            </value>
            <value>
                <fullName>Barclaycard</fullName>
            </value>
            <value>
                <fullName>B-Payment,</fullName>
            </value>
            <value>
                <fullName>ČSOB</fullName>
            </value>
            <value>
                <fullName>Edel Bank</fullName>
            </value>
            <value>
                <fullName>Elavon</fullName>
            </value>
            <value>
                <fullName>First Data</fullName>
            </value>
            <value>
                <fullName>Global Payments</fullName>
            </value>
            <value>
                <fullName>Hobex</fullName>
            </value>
            <value>
                <fullName>HSBC</fullName>
            </value>
            <value>
                <fullName>KB Smart Pay</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>REVO</fullName>
            </value>
            <value>
                <fullName>SIX</fullName>
            </value>
            <value>
                <fullName>Swedbank</fullName>
            </value>
            <value>
                <fullName>UniCredit Bank</fullName>
            </value>
            <value>
                <fullName>Worldpay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>