unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Current_AcquirerR__c.field-meta.xml
<CustomField>
    <fullName>Current_AcquirerR__c</fullName>
    <formula>IF(TEXT(Current_Acquirer__c ) = &quot;AIB&quot;, 0,
IF(TEXT(Current_Acquirer__c ) = &quot;B+S Card Services&quot;, 1,
IF(TEXT(Current_Acquirer__c ) = &quot;Elavon&quot;, 2,
IF(TEXT(Current_Acquirer__c ) = &quot;First Data&quot;, 2,
IF(TEXT(Current_Acquirer__c ) = &quot;Hobex&quot;, 2,
IF(TEXT(Current_Acquirer__c ) = &quot;HSBC&quot;, 3,
IF(TEXT(Current_Acquirer__c ) = &quot;SIX&quot;, 3,
IF(TEXT(Current_Acquirer__c ) = &quot;Worldpay&quot;, 4,
IF(TEXT(Current_Acquirer__c ) = &quot;Other&quot;, 5, 0)))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current AcquirerR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>