unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Current_DCC_Provider__c.field-meta.xml
<CustomField>
    <fullName>Current_DCC_Provider__c</fullName>
    <label>Current DCC Provider?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adyen</fullName>
            </value>
            <value>
                <fullName>Barclays</fullName>
            </value>
            <value>
                <fullName>ConCardis</fullName>
            </value>
            <value>
                <fullName>Elavon</fullName>
            </value>
            <value>
                <fullName>Fexco</fullName>
            </value>
            <value>
                <fullName>Global Blue</fullName>
            </value>
            <value>
                <fullName>SIX</fullName>
            </value>
            <value>
                <fullName>Worldpay</fullName>
            </value>
            <value>
                <fullName>No Current Provider</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>